# ucalc

./: .gitignore  Cargo.toml
.github/workflows/: actions.yml  build.yml  wasm.yml
concurrent_stdin/: Cargo.toml
concurrent_stdin/src/: lib.rs
float_base/: Cargo.toml
float_base/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/targets/: target_0.rs
readchar/: Cargo.toml  README.md
readchar/examples/: generic.rs
readchar/src/: history.rs  lib.rs  readchar.rs  test.rs  tests.rs
readline/: Cargo.toml
readline/src/: lib.rs
src/: compute.rs  lib.rs  main.rs  parse.rs  tests.rs
ucalc/: Cargo.toml
ucalc/src/: cli.rs  colors.rs  complete.rs  lib.rs  main.rs  shared.rs  uterm.rs
ucalc/www/: index.html  start.sh  start_debug.sh
ucalc_lib/: Cargo.toml
ucalc_lib/src/: cas.rs  compute.rs  derivative.rs  functions.rs  functions_list.rs  inverse.rs  lib.rs  math.rs  operators.rs  parse.rs  polynomial.rs  polynomial_impls.rs  rand.rs  simplify.rs  solver.rs  tests.rs  tokens.rs  variable.rs
ucalc_numbers/: Cargo.toml
ucalc_numbers/src/: float.rs  float_test.rs  impls.rs  integer.rs  lib.rs  traits.rs  types.rs  units.rs
ucalc_numbers_macros/: Cargo.toml
ucalc_numbers_macros/src/: lib.rs
uterm/: Cargo.toml
uterm/src/: main.rs
uterm_lib/: Cargo.toml
uterm_lib/src/: lib.rs  window.rs
