cargo-features = ["panic-immediate-abort"]
[workspace.package]
version = "0.0.1"
edition = "2024"

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[workspace]
resolver = "3"
members = ["ucalc_lib", "ucalc", "ucalc_numbers"]
default-members = ["ucalc", "ucalc_lib", "ucalc_numbers"]
