cargo-features = ["panic-immediate-abort"]
[workspace.package]
version = "0.0.1"
edition = "2024"
license = "GPL-3"
repository = "https://github.com/bgkillas/ucalc"
homepage = "https://github.com/bgkillas/ucalc"
description = "a simple to use calculator"

[profile.release]
lto = true
strip = true
panic = "immediate-abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[workspace]
resolver = "3"
members = ["ucalc_lib", "ucalc", "ucalc_numbers"]
default-members = ["ucalc", "ucalc_lib", "ucalc_numbers"]

[workspace.dependencies]
ucalc_numbers = {path = "ucalc_numbers", version="0.0.1", default-features=false}
ucalc_lib = {path = "ucalc_lib", version="0.0.1", default-features=false}
