[package]
name = "float_base"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["f64"]
f16 = ["lexical/f16"]
f32 = []
f64 = []
f128 = ["lexical/f128"]

[dependencies]
lexical = {version = "7.0.5", default-features = false, features = ["radix", "parse-floats", "std", "write-floats", "parse-integers", "write-integers"]}
