[package]
name = "readchar"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
crossterm = {version = "0.29.0", default-features=false, features=["events", "windows", "bracketed-paste"]}