[package]
name = "readchar"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "a readline implementation which prints output while you type"

[features]
default=[]
crossterm = ["dep:crossterm"]

[dependencies]
crossterm = {version = "0.29.0", optional = true, default-features=false, features=["events", "windows", "bracketed-paste"]}
enumset="1.1.10"