[package]
name = "ucalc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["f64", "complex"]
f16 = ["ucalc_lib/f16"]
f32 = ["ucalc_lib/f32"]
f64 = ["ucalc_lib/f64"]
f128 = ["ucalc_lib/f128"]
rug = ["ucalc_lib/rug"]
fastnum = ["ucalc_lib/fastnum"]
units = ["ucalc_lib/units"]
vector = ["ucalc_lib/vector"]
matrix = ["ucalc_lib/matrix"]
list = ["ucalc_lib/list"]
complex = ["ucalc_lib/complex"]

[dependencies]
ucalc_lib = {workspace = true}
crossterm = {version = "0.29.0", default-features=false, features=["events", "windows"]}