[package]
name = "ucalc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["f64", "complex", "float_rand", "mimalloc"]
f16 = ["ucalc_lib/f16"]
f32 = ["ucalc_lib/f32"]
f64 = ["ucalc_lib/f64"]
f128 = ["ucalc_lib/f128"]
rug = ["ucalc_lib/rug"]
fastnum = ["ucalc_lib/fastnum"]
units = ["ucalc_lib/units"]
vector = ["ucalc_lib/vector"]
matrix = ["ucalc_lib/matrix"]
list = ["ucalc_lib/list"]
complex = ["ucalc_lib/complex"]
mimalloc = ["dep:mimalloc"]
float_rand=["ucalc_lib/float_rand"]

[dependencies]
ucalc_lib = {workspace = true}
ucalc_numbers = {workspace = true}
readchar = {workspace = true, features = ["crossterm"]}
mimalloc = {version="0.1.48", features = ["v3"], optional = true}