[package]
name = "ucalc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["f64", "complex", "float_rand", "mimalloc", "cli"]
x11=["uterm_lib/x11", "uterm"]
wayland=["uterm_lib/wayland", "uterm"]
wasm=["dep:wasm-bindgen", "ucalc_lib/wasm", "uterm_lib/wasm", "dep:console_error_panic_hook", "uterm"]
uterm=[]
f16 = ["ucalc_lib/f16"]
f32 = ["ucalc_lib/f32"]
f64 = ["ucalc_lib/f64"]
f128 = ["ucalc_lib/f128"]
rug = ["ucalc_lib/rug"]
fastnum = ["ucalc_lib/fastnum"]
units = ["ucalc_lib/units"]
vector = ["ucalc_lib/vector"]
matrix = ["ucalc_lib/matrix"]
list = ["ucalc_lib/list"]
complex = ["ucalc_lib/complex"]
mimalloc = ["dep:mimalloc"]
float_rand=["ucalc_lib/float_rand"]
cli=["readchar/crossterm"]

[dependencies]
ucalc_lib = {workspace = true}
ucalc_numbers = {workspace = true}
readchar = {workspace = true}
mimalloc = {version="0.1.48", features = ["v3"], optional = true}
uterm_lib = {workspace = true}
wasm-bindgen = {version="0.2.118", optional = true}
console_error_panic_hook = {version="0.1.7",optional = true}