[package]
name = "ucalc_lib"
version.workspace = true
edition.workspace = true

[features]
default = ["f64", "complex"]
f16 = ["ucalc_numbers/f16"]
f32 = ["ucalc_numbers/f32"]
f64 = ["ucalc_numbers/f64"]
f128 = ["ucalc_numbers/f128"]
rug = ["ucalc_numbers/rug"]
fastnum = ["ucalc_numbers/fastnum"]
units = ["ucalc_numbers/units"]
vector = ["ucalc_numbers/vector"]
matrix = ["ucalc_numbers/matrix"]
list = ["ucalc_numbers/list"]
complex = []

[dependencies]
ucalc_numbers={path = "../ucalc_numbers", default-features=false}