[package]
name = "ucalc_numbers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["f64", "list"]
f16 = ["float", "lexical/f16"]
f32 = ["float"]
f64 = ["float"]
f128 = ["float", "lexical/f128"]
float = []
rug = ["dep:rug"]
fastnum = ["dep:fastnum", "float"]
units = ["ucalc_numbers_macros/units"]
vector = ["ucalc_numbers_macros/vector"]
matrix = ["ucalc_numbers_macros/matrix"]
list = ["ucalc_numbers_macros/list"]

[dependencies]
rug = {version="1.28.1",optional=true, default-features=false, features=["complex","float","integer","rand","std"]}
fastnum = {version = "0.7.4",optional=true}
lexical = {version = "7.0.5", default-features = false, features = ["radix", "parse-floats", "std", "write-floats"]}
ucalc_numbers_macros={workspace = true}