[package]
name = "ucalc_numbers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default = ["f64", "list"]
f16 = ["float", "float_base/f16"]
f32 = ["float", "float_base/f32"]
f64 = ["float", "float_base/f64"]
f128 = ["float", "float_base/f128"]
float = []
float_rand = ["dep:rand"]
rug = ["dep:rug"]
fastnum = ["dep:fastnum", "float"]
units = ["ucalc_numbers_macros/units"]
vector = ["ucalc_numbers_macros/vector"]
matrix = ["ucalc_numbers_macros/matrix"]
list = ["ucalc_numbers_macros/list"]


[dependencies]
rug = {version="1.29.0",optional=true, default-features=false, features=["complex","float","integer","rand","std"]}
fastnum = {version = "0.7.4",optional=true}
ucalc_numbers_macros={workspace = true}
float_base = {workspace = true}
rand = {version = "0.10.0", optional = true}
