[package]
name = "uterm_lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default=["wayland"]
x11=["softbuffer/x11","winit/x11"]
wayland=["softbuffer/wayland","winit/wayland"]

[dependencies]
softbuffer = {version="0.4.8", default-features = false}
winit={version="0.30.12", default-features=false, features = ["rwh_06"],optional=true}
bdf2 = "0.7.1"