[package]
name = "uterm_lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default=["wayland"]
x11=["softbuffer/x11","winit/x11"]
wayland=["softbuffer/wayland","winit/wayland"]
wasm=["dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
softbuffer = {version="0.4.8", default-features = false}
winit={version="0.30.13", default-features=false, features = ["rwh_06"]}
bdf2 = "0.7.1"
wasm-bindgen = {version="0.2.118",optional = true}
web-sys = {version = "0.3.95", features = ["HtmlCanvasElement", "Window", "Document"], optional = true}
